--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="card-body">
           <textarea
             readonly
+            class="new-password"
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
